<resources>
<string name="app_name">Barkr</string>
<string name="title_home">Home</string>
<string name="title_dashboard">Dashboard</string>
<string name="title_notifications">Notifications</string>
<string name="Owner_name">Name</string>
<string name="title_activity_edit_profile">EditProfileActivity</string>
<!-- Strings used for fragments for navigation -->
<string name="first_fragment_label">First Fragment</string>
<string name="second_fragment_label">Second Fragment</string>
<string name="next">Next</string>
<string name="previous">Previous</string>

<string name="hello_first_fragment">Hello first fragment</string>
<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
<string name="todo">TODO</string>
<string name="City">City</string>
<string name="email">Email</string>
<string name="textview">TextView</string>
<string name="dog_attributes">DOG ATTRIBUTES</string>
<string name="advanced_search">ADVANCED SEARCH</string>
<string name="button"><![CDATA[<]]></string>
<string name="search">Search</string>
<string name="apply_filters">Apply Filters</string>
<string name="human_attributes">HUMAN ATTRIBUTES</string>
<string name="age">Age:</string>
<string name="gender">Gender</string>
<string name="spayed_neutered">Spayed/Neutered</string>
<string name="shots_up_to_date">Shots up to date</string>
<string name="dogage">Age:</string>
<string name="doggender">Gender</string>
<string name="rating">Rating</string>
<string name="male">Male</string>
<string name="female">Female</string>
<string name="please_input_any_specific_attributes_to_search_by_below_every_value_left_blank_will_be_ignored">Please input any specific attributes to search by below. Every value left blank will be ignored.</string>
<string name="back">Back</string>
<string name="birthdate">Birthdate</string>
<string name="state">State</string>
<string name="Bio">Bio</string>
<string name="phone_number">Phone Number</string>
<string name="pet_s_birthdate">Pets Birthdate</string>
<string name="Petsbio">Bio</string>
<string name="breed">Breed</string>
<string name="pet_name">Pet name</string>
<string name="edit_pets_name" />
<string name="data_of_birth_for_owner">Date of Birth for Owner</string>
<string name="humans_dob" />
<string name="date_of_birth_for_owner" />
<string name="title_activity_createprofile">createprofile</string>
<string name="title_activity_create_profile">Create Profile</string>
<string name="Headercreate_profile">Create Profile</string>
<string name="TextHumanName" />
<string name="FinishProfile">Finish Profile</string>
<string name="save">save</string>
<string name="imageofHuman">Image of Human</string>
<string name="pets_birthdate" />
<string name="Humangender">Gender</string>
<string name="ImagePet">TODO</string>
<string name="SaveButton">TODO</string>
<string name="CancelButton">TODO</string>
<string name="AddButton">TODO</string>
<string name="ButtonInfo">TODO</string>
<string name="FloatingEditButton">TODO</string>
<string name="ImageofownUser">TODO</string>
<string name="location">Location</string>
<string name="numberofpets">Numberofpets</string>
<string name="contact">Contact:</string>
<string name="pets">Pets:</string>
<string name="displayspayed_neutered">displaySpayed/neutered</string>
<string name="PetsImage">TODO</string>
<string name="Pets_petBirth_Month">PetsBirthMonth</string>
<string name="Pets_Birth_Month">PetsBirthMonth</string>
<string name="Pets_birth_day">Pets_Birth_Day</string>
<string name="Pets_birth_year">Pets_Birth_Year</string>
<string name="Pets_Gender">Pet\'s Gender</string>
<string name="SignInTitle"><u>Sign in</u></string>
<string name="SignUpTitle"><u>Sign up</u></string>
<string name="ForgotPassword"><u>Forgot Password?</u></string>
<string name="DontHaveAnAccount">Don\'t have an account? <u>Sign up</u></string>
<string name="AlreadyHaveAnAccount">Already have an account? <u>Sign in</u></string>
</resources>